    or not.

  - [bug] Repaired the use_scope_identity
    create_engine() flag when using the pyodbc
    dialect.  Previously this flag would be
    ignored if set to False.  When set to False,
    you'll get "SELECT @@identity" after each 
    INSERT to get at the last inserted ID,
    for those tables which have "implicit_returning"
    set to False.

- postgresql
  - [feature] Added new for_update/with_lockmode()
    options for Postgresql: for_update="read"/
    with_lockmode("read"),
    for_update="read_nowait"/
    with_lockmode("read_nowait").
    These emit "FOR SHARE" and "FOR SHARE NOWAIT",
    respectively.  Courtesy Diana Clarke 
    [ticket:2445]

- mysql
  - [bug] Fixed bug whereby column name inside 
    of "KEY" clause for autoincrement composite
    column with InnoDB would double quote a 
    name that's a reserved word.  Courtesy Jeff
    Dairiki. [ticket:2460]

  - [bug] Fixed bug whereby get_view_names() for
    "information_schema" schema would fail
    to retrieve views marked as "SYSTEM VIEW".
    courtesy Matthew Turland.

  - [bug] Fixed bug whereby if cast() is used
    on a SQL expression whose type is not supported
    by cast() and therefore CAST isn't rendered by
    the dialect, the order of evaluation could change
    if the casted expression required that it be
    grouped; grouping is now applied to those
    expressions.  [ticket:2467]

0.7.6
=====
- orm
  - [bug] Fixed event registration bug
    which would primarily show up as
    events not being registered with 
    sessionmaker() instances created
    after the event was associated
    with the Session class.  [ticket:2424]

  - [bug] Fixed bug whereby a primaryjoin
    condition with a "literal" in it would
    raise an error on compile with certain
    kinds of deeply nested expressions
    which also needed to render the same
    bound parameter name more than once.
    [ticket:2425]

  - [feature] Added "no_autoflush" context
    manager to Session, used with with: